[gd_scene load_steps=10 format=3 uid="uid://bl8rwhb22entk"]

[ext_resource type="Script" uid="uid://clbdppcyo31q3" path="res://scripts/ui/UIManager.gd" id="2_migvx"]
[ext_resource type="Script" uid="uid://cga6ktuqyd8nk" path="res://scripts/gameplay/EnemySpawner.gd" id="3_v5p7v"]
[ext_resource type="Script" uid="uid://c1b2hthys2jpl" path="res://scripts/gameplay/Base.gd" id="4_8bvh6"]
[ext_resource type="Script" uid="uid://dn33dk8o43s7i" path="res://scripts/core/PauseMenu.gd" id="5_xye8g"]
[ext_resource type="Script" uid="uid://hfl1kequiwo8" path="res://scripts/core/LeaderboardUploader.gd" id="6_anm5x"]
[ext_resource type="Script" uid="uid://4ew5mwopcufy" path="res://scripts/gameplay/TowerSlot.gd" id="7_vs3mj"]
[ext_resource type="Script" uid="uid://cyhhmp60vvu18" path="res://scripts/gameplay/TowerManager.gd" id="8_migvx"]
[ext_resource type="PackedScene" uid="uid://bv28o38fi28ra" path="res://scenes/gameplay/Tower.tscn" id="9_8bvh6"]
[ext_resource type="Texture2D" uid="uid://duovrmplmcvdo" path="res://assets/sprites/towerSprite.png" id="9_v5p7v"]

[node name="Game" type="Node2D"]

[node name="UIManager" type="CanvasLayer" parent="."]
script = ExtResource("2_migvx")

[node name="VBoxContainer" type="VBoxContainer" parent="UIManager"]
offset_left = 552.0
offset_top = 2.0
offset_right = 831.0
offset_bottom = 278.0

[node name="ScoreLabel" type="Label" parent="UIManager/VBoxContainer"]
layout_mode = 2

[node name="BaseHealthLabel" type="Label" parent="UIManager/VBoxContainer"]
layout_mode = 2

[node name="NextTowerPanel" type="Panel" parent="UIManager/VBoxContainer"]
layout_mode = 2

[node name="NextTowerLabel" type="Label" parent="UIManager/VBoxContainer/NextTowerPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("3_v5p7v")
metadata/_custom_type_script = "uid://cga6ktuqyd8nk"

[node name="EnemyContainer" type="Node2D" parent="EnemySpawner"]
position = Vector2(51, 36)

[node name="SpawnPoint" type="Marker2D" parent="EnemySpawner"]
position = Vector2(60, 38)

[node name="Path" type="Node2D" parent="EnemySpawner"]
position = Vector2(60, 42)

[node name="PathPoint1" type="Marker2D" parent="EnemySpawner/Path"]
position = Vector2(11, 359)

[node name="PathPoint2" type="Marker2D" parent="EnemySpawner/Path"]
position = Vector2(393, 54)

[node name="PathPoint3" type="Marker2D" parent="EnemySpawner/Path"]
position = Vector2(473, 395)

[node name="Base" type="Node2D" parent="."]
position = Vector2(127, 136)
script = ExtResource("4_8bvh6")

[node name="PauseMenu" type="Control" parent="."]
physics_interpolation_mode = 0
layout_mode = 3
anchors_preset = 0
script = ExtResource("5_xye8g")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
modulate = Color(1, 0.415686, 0.419608, 1)
top_level = true
layout_mode = 0
offset_left = 727.0
offset_top = 167.0
offset_right = 981.0
offset_bottom = 280.0

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
auto_translate_mode = 2
custom_minimum_size = Vector2(20, 0)
layout_direction = 1
layout_mode = 2
icon_alignment = 1
vertical_icon_alignment = 0

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Press me nigga"

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
auto_translate_mode = 2
layout_mode = 2

[node name="LeaderboardUploader" type="Node" parent="."]
script = ExtResource("6_anm5x")
metadata/_custom_type_script = "uid://hfl1kequiwo8"

[node name="HTTPRequest" type="HTTPRequest" parent="LeaderboardUploader"]

[node name="TowerSlot" type="Area2D" parent="."]
position = Vector2(337, 55)
script = ExtResource("7_vs3mj")

[node name="HighlightSprite" type="Sprite2D" parent="TowerSlot"]
position = Vector2(0, 3)
texture = ExtResource("9_v5p7v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerSlot"]

[node name="Tower" parent="TowerSlot" instance=ExtResource("9_8bvh6")]
position = Vector2(-47, 160)

[node name="TowerManager" type="Node" parent="."]
script = ExtResource("8_migvx")
metadata/_custom_type_script = "uid://cyhhmp60vvu18"

[node name="TowerSlotContainer" type="Node" parent="TowerManager"]

[node name="TowerSlot1" type="Area2D" parent="TowerManager/TowerSlotContainer"]
position = Vector2(73, 112)
script = ExtResource("7_vs3mj")
metadata/_custom_type_script = "uid://4ew5mwopcufy"

[node name="HighlightSprite" type="Sprite2D" parent="TowerManager/TowerSlotContainer/TowerSlot1"]
position = Vector2(0, -1)
texture = ExtResource("9_v5p7v")

[node name="TowerSlot2" type="Area2D" parent="TowerManager/TowerSlotContainer"]
position = Vector2(125, 206)
script = ExtResource("7_vs3mj")
metadata/_custom_type_script = "uid://4ew5mwopcufy"

[node name="HighlightSprite" type="Sprite2D" parent="TowerManager/TowerSlotContainer/TowerSlot2"]
position = Vector2(1, -2)
scale = Vector2(1.0625, 0.96875)
texture = ExtResource("9_v5p7v")

[node name="Tower" parent="." instance=ExtResource("9_8bvh6")]
position = Vector2(218, 315)
